--- a/Excalidraw/Drawing 2025-11-02 14.53.43.excalidraw.md
+++ b/Excalidraw/Drawing 2025-11-02 14.53.43.excalidraw.md
@@ -59,6 +59,12 @@ d37b8dd11ae41d7a28518c27a9827f94e33a9e0d: $$\vec{L'}$$
 
 e288dd47afb453b1c94b864d0a7b7025f278d589: $$z$$
 
+d86d57427073e7c3208cd20bf6811b4f1348ec10: $$I_1\omega_1\vec{e}_1$$
+
+928125e73818f93a9edcb288b21640989cc95f6e: $$\vec{L}$$
+
+765a5f360aa2b2e56a88ee07d4f3d2c83ba3f23e: $$I_2(\omega_2 \vec{e}_2+\omega_3 \vec{e}_3)$$
+
 69a3dc30b8c0694bf399eae122e892ffc537ec67: [[Pasted image 20251212104425.png]]
 
 %%
@@ -168,98 +174,142 @@ xz7jMui3tYat7ui7DBG15fVveWfHPl8nfoD8a10vTwxb0oMnOkK6Dag+LCE3TyigqHQt4IR1xbNoh46T
 
 f1tOey/ZtBIafOWVGqHNMdq900IiJBHBp9Pp/Y8r2YosUAznFIM1wuQ3SVN9waxXqGql3xzHjm+JGvLuG3xqlOiar3tXO8NNSzgaapIIWYUkGc9GA2niCiYE1n0i18J0Iydx/227IesRpGc2bzYpmJm4BhJFsCQPYAvglaDuNgHe47p+ImgMQMcDwBbAzwHSKdVOqlrEA6OQWPA9g0IN4NC5lQVda1QkAO1yGlB+8tQe3PA6MgBoLYDaGaDKWcIN
 
-ocjPcA/CEBqIRgFxAaBIM6nNZ6oQFiqtzjtJSZlwdcGxtNleRMYfLBlPX1VbSjLl4rBokzxoIKJiuCYRnZMkuDKGXg7OShMQl2Oz7fTiFnVi4xQsLc0LxyjJrHNN6Rq9pEu0EHhduVRqYzaWmw8RaO72GkzvG4S7IsLkGhMzLYbM6JN13TR4B5NX6Q3Po1TXGNabVpPxjFwKMrdM23uUifrITNX95bZgZxEbMCXpmYmtxVWMk0dm+xyRsCslb/gA
+ocjPcA/CEBqIRgFxAaBIM6nNZ6oQFiqtzjtJSZlwdcGxtNleRMYfLBlPX1VbSjLl4rBokzxoIKJiuCYRnZMkuDKGXg7OShMQl2Oz7fTiFnVi4xQsLc0LxyjJrHNN6Rq9pEu0EHhduVRqYzaWmw8RaO72GkzvG4S7IsLkGhMzLYbM6JN13TR4B5NX6Q3Po1TXGNabVpPxjFwKMrdM23uUiYiOU1j6S20+swM4iNmBL0zMTW4qrGSaOzfY5I2BWSt/
 
-Q0rG1D7iTA2q5XhwW4Aq3nGyN6pSjgUlmcnsimMzOT85t7Rnt5PJL+TVYdcRaCCBXgKAubSo7uf6DNAKSBoIwIkCZCkB8MLuY4MwApKjBMIWwEYBmYEPh4mIwhrHagCwqnx9MzLJWlrFTzMxJp2CfhMSBkhKGMjmV0fWBu1Hc6Sr2ysq7qzWnsLhdVVpDTVdOXS7xdIKARc1fqs4bYzthki68Z6s+iPjBctM41Qx0a6gp1c4cDQo5gKNpr9F/6fV
+wAIaVjah9xJgbVcrw4LcAVbzjZG9UpRwKSzOT2RTGZnJ+c29oz28nkl/JqsOuItBBArwFAXNpUd3P9BmgFJA0EYESBMhSA+GF3McGYAUlRgmELYCMAzMCHw8TEYQ1jtQBYVT4+mZlkrS1ip5mYk07BPwmJAyQlDGRzK6PrA3ajudJV7ZWVd1ZrT2Fwuqq0hpqunLpd4ukFAIuav1WcNsZ2wyRdeM9WfRHxguWmcaoY6NdQU6ucOBoUcwFG01+i/9
 
-j2i8QRjcJ7uVWbWtzaq1m1uszTWuuc6a1Y8wS+JuOvbblmc89m1fHk30nzEQGdEYiN435H0SaIjxBiKxGx6/Jg43TTXklge3YY7NsxDDfFMRd+g+gaoNqB9rrBsk5EfKa0APVtAKSlQR5g+qJtR4SbGeQTH+oAgMqi6KC6aFIPeA2MOYskYBF/GZsqHWbqx2OxBoWnpa8Jrjcqycf5tnHBbxhy42httGS6IzdV60dLfatxmnlct7q/b16sq6MsKt
+Pqx7ReIIxuE93KrNrW5tVa3ja/vLY3XOdNaseYJfE0nXttyzOeRzavjyb6T5iIDOiMRG8b8j6JNER4gxFYjY9fkwcbpoJHRIbLtBiLv0H0DVBtQPtdYNknIj5TWgB6toBSUqCPMH1xNqPKTYzyCY/1AEBlUXRQXTQpB7wGxhzFkjAIv4LNlQ2zdWOe35pCvdLXhNcblWTjAts40LeMOXG0NtoyXRGbqvWiZb7VuM08vlvdX7evVlXRllVv3B8M7h
 
-+4PhncMUXbKaCZjcbpv1M6SzgKxnABHv7piS15txE5bcT7W3+NS20+t8FAl7XADWJ1GZ7o8WnW2h6iFm2vC9svwKZvtkO/7fMSB21NRRjTdiXOZTmo7SRru+kayP/2bLCSG8NqA4BGAcWpAciNUH6AsGeA+gVJJgB4BMg2GlQINv5fyiBWN2tPCEN8Bmhi4YQHCIVqnldPYIIrfGB7J3FwUZ5iQEQi7X+G9PgWa81raA5UXVLtNPJ8F6DaVf7u82
+ii7ZTQTMbjdN+pnSWcBWM4AI9/dMSWotuImrbyJza9D1PrfBQJ+1wA1idRme6PFZ1toeolZtrxvbL8CmX7dDsB3zEQdtTUUY03YlzmU56O27V3UXsbw2oDgEYBxakByI1QfoCwZ4D6BUkmAHgEyDYaVAg2/l/KIFY3a08IQ3wGaGLhhAcIhWqeV09ggit8YHsncXBRnmJARCLtf4b0+BZrzWtoDlRdUu008nwXoNpVnu3zbYUkTBbY+aq7FBQ34W
 
-2FJEgW2PmquxQUN+FsM5PduNj3ozVhue7La6uJnl7it31qmZcP3AKk6t0ub8a605mAV40uaKugHCzWhtgyI++or60Xo9FlndScAavs1nneW1pAtJCq7P3MTTto61tusn4mzrxsWLTw/sJpp+Hug4R5du5hn9pIYIN6/2Ijvx7Pr6etPb9ZSX/Wk972nPcDbXP9QwbO7fAJDehtIOKgTIciJoGUBGADQMACLvoEYZCBqgKYC8/hgoCkBEgLubU8NY
+wzY9248PejNWHp7ctrq4mYXtK3fWqZlw/cAqQa3S5vxrrTmYBXjS5oq6AcLNaG2DJ976ivrRej0WWd1JwB8+zWYHlbX6zgxP3lVmE0HXVrR7Z+6dfdtpHvFzDlnGw/xgcOH+PD7mGf2khgh3r/YyO/Hq+vp609f1lJQDaT3vac9INtc/1HBs7t8AUNmG3HYqBMhyImgZQEYANAwAIu+gRhkIGqApgLz+GCgKQESAu5tTw1gKwU9JvBKNI0vB2HlQ
 
-CsVOSbwSjSNLwdh5UCKzD6WGMKBUULhu6aJQ1rDMgx1X80IL+PGKytuaziuwbvgdkSKSPe7MGnmxVb+oj319098e4nKatT2GJIi10dFk6s1buLK9pW/1fXs2ghrpQbXdY562rgxsFwZrLReS3ySDbbYF8yMUfuVnDr1ZqxaOP8ejY3JIyYJziqAMbbWzH9t22kZJhhwlW6zhlMzFod2xdnEcEnMN2uxqColzK6B/dujuwx1YBLzzUS62fEwOIGeP
+IrUPpYYwoFRQuG7polDWsMyDHVfzQgv48YrK25rOK7Bu+B2RIoI67swbebFVv6oPfX0T2R7icpq+PYYkiLXR0WTqzVu4uL3lb/VlezaCGulBtdxjnrauDGwXBmstF5LfJMNttgXzIxW+5WaOvVmrF9W220gTckjJ77mJ528da23WT8T51iQmHCVbzOGUzMUh3bFWcRwScw3a7GoKiXMrwH92mO9yfHFpOOTGTlPYDdBu5Pgb6AQh/UgTCQ2N2JTk
 
-ZxS8OfEgKZx8wp2CyZk/WingNlc6U6BvoBKH9SBMBDY3Y1ORTe6q2txE0CVBGR/B8h1NRmrPqwKcQC4ivNx204D+NNsmEHGbzHxsQuwHqW7NH0sX5pCvE54hcX30c5HK+1C4o6FvKPMLQasRhcuN73PeFjz30kRfjOL2o1CajW9pTXCgrprhNPTv4dG0bxg4/ITucnzvv1noO+we22UE4uX3at3+3jb/oiP8WX7oTr+kY5Ev/0EkuAcUNqBlq4BN
+U3uqtrcRNAlQRkfwfwdTUZqz6sCnEAuIrzcdtOA/rTbJhBxm8x8bELsB6luzR9LFju7qNwkL7kLfd8RwPckfC3pHmFoNWIwuXG9znvCy576SIvxm57UahNZre0prhQV01wmnp38OjaN4wcfkJ3OT78btro2cPQ7bKCcWz7tW7/bxt/0bWsVTtw6844a0POwD/9BJLgHFDagZauATQHsFwCuxtQUDPZXsA/K4B1wjsYgFm54Bzkst05X4B5EwbG0q
 
-AewXAK7G1BQM9lewD8rgHXCOxiADbngHOSy3TlfgHkTBsbSqoLrDL692oBAETtlBtQFJFMOOPiCDWCb6AZVdq+CUPBmiTdh+I3FTwIIph9KkWDYQvg9TfpWVryMc7W5bKDSyFwe/I+HvuvR7vdISlvpws77NloZywxPWeP4b056NM/WovRV5o01AOSFWmxOARblYrF++8i7GxZuVrCJvN28Z4vhG+LWKx2wde8cNaPnYByt1WA8jMwR1sDRoJ27+
+qC6wyyvdqAmX11FB50C7Ssv6auXF7QgNqApIphxx8QQa4TfQDKrRXwSh4M0XrsPxG4qeBBFMPpUiwbCF8Hqb9KyteRtna3LZQaR1dL6I5CGw5xcd7pCUt9OFnfZstDOWGJ6zx/DenPRpn61F6KvNGmoByQq02JwCLcrFYsBvc0Y2YNytYRPhu3jPF8I3xZjeu643+Kvq0m+CAANcAHkZmCOtgaNBi3f2Q6NgGhBZb80IQdyzhVuRbBNAxiOzLgaN
 
-yHRsA0ILLfmhCDuWcKtyLYJoGMR2ZcDRtJI6bSIPr3UuM7+4BF0wCpJyI+gaiNOuGdV6tXJN8SJ7ILoGYX8/IDmAI4AmldkgHaC4BFeJApxANIWsFIhNH3+zirCF7ZU69FB8373gZx91c/yhYWfX1xv1xo+udaPv3zzkN3o7/en7fSFGn3tPzv10aaLYHqE+oypvBbU3x9GD7mlTTgbz71uvNm8/MSFu0PeqDE+i9fs4ocPOK0SxUBlqIGstuAdU
+pJHTaRBle6l1IOmX0A5lzdR2+3XWWe3kq+4BF0wCpJyI+gaiNOu6dV6RXpN8SJ7ILoGYX8/IDmJE7WqldkgHaC4BFeJApxANIWsFIhNH3+zirCF7ZYvvo5iOV9qFg10PZPdg1it5rhR8c6Uc3vrntrtR/e9P2+kKNPvafnfro00X33UJ9RtTeC1+v3HdlYBN8HA0n3rdebO5+Yijfge9UGJnFUAeg9L2gaEtGWogay24B1SMDHjDwE0DHxEDlxF4
 
-jAx4w8BNAx8RA5cReA7HLgkllnrGBHdsfx3cI5rSHhndMh8A+MCgIwxdxtKV3ZQB8/qe0wKHlqT1kdHu+7PiPy0jKfagIqqxZW/gl7hq9e+7yGfqyxn115VbM8XHn3YNYrTZ4/cWG7lbV4Nwvec/qU3PHh9qEIMphpqpRcb1Ngm95StI6C0H9NySErRrQEPXFurQW94vFthN+11a9IpS/i0AG1COcj2G1AIAhQZOj4MA0cm1vSP74UcrgB7Ah7Un
+DscuCSWWesYOt+R8bdwjmtIeGj227naWXIHNDMUxACZD4B8YFARhi7jaWjuygD5/U9pgUPLVnrI6ed92f4flpGU+1ARVViyt/At3DVnd93m0+ih+berwMwZ6Of5QsLpr646Z8vcWG7lbVm17PZs/qV7PHh9qEIMphpqpR7r1Np695StI6CP7jxySErRrRAPXFurZG94vFsfHD9hF1/S0ciXk3FQahHOR7DagEAQoMnR8GAaOT03aH98KOQQ8IAQ9
 
-VX3E+x4ncmOJgM7xhvuHoAa0KSmAHSyU01lruxnns8dcjn/AkDam/Ss1fuibt/nd4Mx8b/MuxDTe9Rjr290vojkIbLnq3iz967Fu4X/XZWwNzGp/cJmXP4bqdlGSTyfxzvVWSE/VljoQdDgEKoL9DyQKr95ksLrD9F8sXzb6tX3kt5h/xV9XcPwQABrgA7TeRdaf2LLfEE0AtuwQoA+lFEQQD5lj4Dg5H/gZNg1eGTzW1cjO8SA4RJANoCksQEyT
+sTor7iYo9NudHxx22mQbMsbqnajHqg926geSrGG+4egBrQpKYAdLJTTWeO76eezx1yOf8CQNqb9KzV+6eu3+d3gzGxv8y7EFN71GIW5v1ZBb3p8qvLfj3q3k1+LdwsWuytVrmNbe4TO2eHXU7KMknk/jneqskJ+rLHQg6HAIV3n6+6NlX7zJQX8bkL5Yvm31avv8LqD+7pg84rRLVYDtN5F1p/Yst8QTQHm7BCgD6UURBAPmWPgOCUf+Bk2CV4ZP
 
-4ZYd9AegJkn6DahHmt7HgBSRDodef2f7Z9ar24HhWJRAaPSAo1EhcQlEO6NZloogS2ndmqywSNXU36ovBHL3XOJX8knn8nUrP3Cac5kfnPNpHr2qw842/qOtvkZtgEOJF9y6nPrzt74Y/O6fOTH2AH54T6sejWAT7UFjV5EEi1/E2bKXa75/qxsInYK85azm7hcW3fHuJ4poXokD3A2ArQaiGwHoCVBmGFACLlsAYPMAKA/IW8hXsTidbQbQV2GF
+NbfyWP2jxeXbcJhO3NX7DJKsSA4RJANoCksQEyT4ZYd9AegJkn6DahHmt7HgBSRDrtef2f7Z9ar24HhWJRAaPSAo1EhcQlEO6NZloogS2ndmqywSNXU36wvOHL3XON38knn8nU/PrV8I51b7PNphr2qxc5M/yOtvkZtgEOPl9y7rPtzt75o/O6POdH2AF59T6MejWAT7UFjV5EEj9/E2bKPa25/qxsInYK85a6G7BeW3XHuJ4poXokD3A2ArQaiG
 
-G1FOSqPAPQDMAPADABsM7QI8wGgEXGjqaA+4JoCcQxAIkDKAZDtnDf+5Tr/4Iw//mf47m6AP0DeAHEGwwpgMAPcDNKFJBFyaApAJoCSm1QMQDLuX/j0ZSu07pgEUySLoWjEusvsW4hOxvuKoKuF7EHj9AzAK5Y2g5mqyD0AiQCMD/MZIvhjkQ7QMQDGWHXtTyl2IFKCAewpOk7JgC/EDVymy+MFugDInkucAfqbduF6QAWVnA4UgenlI7c2Hfne5
+wHoCVAzDBQARcWwAwbMAFAPyC3kFeonCdaYNkFawwUbKKaSqPAPQDMAPADABsM7QI8wGgEXGjqaA+4JoCcQxAIkDKAeDtnCwB+TvAEIwiAR/47m6AP0DeAHEGwwpgMAPcDNKFJBFyaApAJoCSm1QMQAjuMAT0YsuEAAgEUyULongjgnwBr78W33nb7CmRPnV5B4/QMwCuWNoOZqsg9AIkAjA/zGSL4Y5EO0DEAxlu17U8RdiBSggHsKTpOyYAvxA
 
-LeFzit7bS23le60SVylCgJQxAEP4XQBFg8qOe+3uP75uk/qAaq6hcjLqS+84lGQDgG/HhS62dGvrYGKu9AYJWMqkl3JeO+KrF7kWOKqwGDG42mi51qiHjibe+3ulJoRoP9vA5aQGTvCJ+2ymiiK644DpiKaa2Ilk7MmtzDHbKGxgXJoIO3krwGSqUAPgBwB8QMwCkAXAB17E+ygWQp6ytBC+Zf8cIKCqiQiIEXiyQaCOFbMwGqFa62qv0nsaWBN7
+1cpsvjBboAyJ5LnAH6s3YBekAFlbt2EGgtI7Ok/m4y6uovgc7i+20tt7butElcpQoCUMQAr+F0ARYPKVnvt6b+Ebtv6gGquoXIy6KvvOJRkA4Bvx4UetnRoG2BirvQGCVjKpJdyTjviphetZv671mgxuNpwuUXo/Yu2SLniZSaEaB/bpGWRj7aKaCIspooiuuMA6YimmtiJJOzJjOaw2I+PgAEB8QMwCkAXAO160+ZgWQp6ytBC+Zf8cIKCqiQiI
 
-oaSd+RhuZ52k/Pn36H6tnr35Ccu3rGqhuEvmRYRumnH7LRBQ2j54b+TGqrz04SQWr75q8IM7D8QF7skHmKR/vo7eievlWqSw2AcDqX+1/rf73+PQI/7P+LuK/7v+pAJ/6oBDAWDZ/+xMCCEJIQASAFgBEAVAEwBcAQgFIBKAVmYjOGAZGzRKCXrkGhGpvql54eEgJm6du8DGeBTqCwav6uwWBvsAFU2oE7DoMWsNqA8AutIOrCeulqx4o+vvuYjN
+EXiyQaCOFbMwGqCq62qv0nsZCOWnnu46ey+ocpHuwQRvpS+C/ofpme8/kJy7esana7K+ZFo66acfsnkFDarnlf5MaqvPTilBhvvmrwgzsPxCbuZQeYov+6jt6KW+1trDC0BwOt/6/+//oAE9AwAaAEu44AZAGkA0AeQFCB4NggHEwSIQkgoBaARgFYBOAXgEEBRASQFkBWZj05UBkbNEqRedakB4O+4tAAz7AWwMW7wMZ4FOo7B5/q7BYG+wAVTa
 
-aSANx5X+N/nf4P+T/i/5v+mWgiG0sjAc+p1E68DCCbgJhKML5+3AIJBhazdt8BdsMFpBKeyf6qzrgIuwiODzK68hHAwqt8CNygCrfrzrt+OrDsHnGDgZo4C+EtkL6i2XgZVo+B1Wh6zIe7zuW7T+AbPcDtepFrdzEhC/iKZjWu0CMir8I5mmrCQ2/mZRFw64K7C2unjr8FYeaQX4422aqErCbOWdIb5cBP3h7oSarts2xzyGSGaHMwFoamI8OAfC
+gTsOgxaw2oDwC60g6rx66WZHqj7h+5iM1rreJDDj5x+pQAn47qtXp/7oAKIX/4ABQASAFgBEAZlp4htLMIHPqdROvAwgm4CYSjCjftwCCQYWg3bfAXbDBaQSnsn+qs64CLsIjg8yuvIRwMKrfAjcoAuP686uziI7T+Rhit6Wu9wdOBS2k9hVrr+CQR6wge9zn967+AbPcBtepFrdyMhR/iKZjWu0CMir8I5mmrCQt/mZRFw64K7DqujjtCHxulQW
 
-UC2hNBBsSOh64OUHaakdvS48q31suyhs6QLKgAMEXHABiypACMAcA1UsTAZM0EKZbtWN9NWAvc9qF5DV0BzgXB0mi/kK5Dhd3COFRQADEyDagqSD4jagkgG4Zzh2oAuEZgfMDYyaBviqyys62zImArhTOnFqWwC5FqH4UEOP85OQy5iU4CqINugFUOlTtU7WcM7piGgB4AZAHQBPbviHiWhISqGjOowbwA8sygi0hOorxNXymycIG6aJaIKhIjX6
+45G+K/Is5Z0Nvg0E/eczAE5u2zbHPIZIPoczB+hqYiw4B8JQMGE0EGxOGHrgCToyYjB05hS5LmVLqkqhs6QLKgAMEXHABiypACMAcA1UsTAZM0ELR5IwiYNWAvc9qF5DV0GzgXB0mx/kzKRSG4ZzQAMTINqCpIPiNqCSAbhseHagp4RmB8wNjDYG+KrLKzrbMF4VZZPAacHpALkDofhQQ47zk5DLmOTgKoMuzLr05suRThy7Wc4wRADkh6AZgHYB
 
-iVmCgJAsYOrTdoQ0rsDaeqxrKISizePjL1CCjBsEOu3NnBo2Bhyjz6ehdnt6E3GA/jxH+ho/r4HBhCtsl5hhTWoXIjAc/mgGPclchfrxBcIKCQDmYKpVhee8biZxSE2RO8CW6h/vmEfehYWm75kJYb4o5Bb9NwEtm79idY4unZnojkRnEJRGaiORNnB0RY6Cmg8IQRD2EfWh8tybjiaesOGc0Y4ROG3k04bOF3c14dgCLhSMK+FWW7PNCrp44Jvs
+uAWW60h4lvSFWhmESsDmBTwMoItITqK8TV8psnCBumiWiCoSI1+olZgoCQLGDq03aENK7AqnqsayiEos3j4y9QgownBPgTzZwa/gVcFBBIZiEHTeYQcmHHSqYbLY3OGYYrY4oibqkEr2IwAf4UBj3JXIX6RQXCCgkA5mCqVYznh64mcUhNkTvAlus/4thH3m2GghSsJ2H1B7IaEY4moft7qtBXAmLh8RD1JqI5E2cCJFjoKaDwhBEC4dppR25Ljy
 
-5ye/xruFzi/kY/QAMQfiH5h+EflH4x+cfgn5MgSfin5hRN4fRTLhVlkBJ84zAiMozQikf8bBSwEUBFlOkrihELsVTnK4QRtThIDjhk4SFH3mYnqhHyQReDvCby0mDhEKeiZBCCfAzAnGCZhRWGN4bcnsq8Qh6VCMghSE8ylhTiIxMq8TP8YpHa66ibfuz7bBHEdz72BIZv4yWevEZt5Xun7jt7aOe3kGHmOYQaKh9aoHhv4qBEJnNZQmXkBwhzIV
+o/Wy7C+GP024buG3kB4UeF3c/4dgBnhx4bKpWW7PNCrp44Jus4Se/xk+HJRd3JuFRQADCn5p+Gfln45+efgX5F+TICX5l+2UQBH0UN9JeHTg/MHzjMCIyjNDmR/xsFLoR6TuhGkoVEe8zYR0NrhGlOEgDuF7hmUfeYCeiwfbKwKwMpvLSYTEQBIx4EIJ8DMCcYHWFFYo3htyeyrxCHpUIyCFITzKWFOIjEyrxM/xikGrrGYC+ZwYaSxh5xjcFGeZ
 
-WJkGdib2Nr74quvlmL6Rp/l/6gh0oRCFyhMIXCFKhiIbGE/+VDqiGww6IRUBQR2IbBF4h8AYhHIBWoL866mjAX/7khABhWGIe1If94JIHclJbOwnbn26Tk9OFrSjkm4AgDKWWkGzHjk8Pk272+mWl776WVVBx4mOYEA14nhZ4ReH9RNemqGfwReFYLzQecEpKp4XwVIywkpOIVzo4PUopSTea0CxFXuzdBz7Ouy+pxFnRGFhdEHBajkcH8RJwV+6
+7psoy+jwQmHPByjnt7VaJ+hkEOe7UH1pvuV/uYEQmc1lCZeQHCHMhVY4gWcSEUq1GhDOR+Khb5Zirke/4wByIT/5Gh6IZiFmhuIfiFFhcAUQ7EhiIUTFkhqAYRFUhJEfgGEB5EaQFagrzrqbCBogT5Jshb9HIFCWsXrrwtqL5nNDOwxbhW6Tk9OFrSjkm4Ij7pULjMOruWIQE7BEe+/qR5YMJtCqHL2OjmBAVe5BlV74+XbrHYsedXu+GfhCAN+G
 
-EW5wQd7/uR3tvZ66EkopQxujjld4aROeOzAjSAMYRRn2aELpEgxE/oCE8aaMZDEJIYITKGQh0IQqHwhiMSJ7IxVACTE+SFIWZGVhlMUDQS0iBq0CaAxAFsAIMyloKDWmWwAgDF06wCD7Eu/ascC1uiDIcB/AxxjOoih3vqj61ehckIwNe/QPhgygjDFUqSxj5soLisRgggj3wYLoowvcDssgpSW75g0S2mzpnKw6xFgaxFbBRpCdF5aJscLYqOl0
+/hQrmHSdeNoZ/BF4VgvNB5wSkqngQhUjLCSk4hXOjg9SilBN5rQUkdu7N05wfN66e8kZ3SGekvqe7YWAMRe7buV7jt6gxrwQd4PuR3hvZ66EkopSuuljld52ROeOzAjS6MczyLOZvrjFb+8ITxr0x5AcTGohxoRiGmh2IeaFQBXMYf40xVAHzFwi3Yd5FhunIXF51RxAK0CaAxALyFtqgoNaZbACAMXTrAoPti79qxwOm6IMhwH8CY+EKHpY6xBl
 
-YcESUVsQG6CRO8R1Zj+J+qEHue7UNbCgkRumpEexkLgfSUEa4Pd5GRTcLJDPegce7qgx8Lvr68a5YYl6luIBr9ppeEgHnGDq7btpaTqtyFlTrA2XlzDOwQoJAmV+1yPFQ7Alvh5B8KelibRiha9iY4TUM7ngGw6rQIQHEBpAeQGUB1AbQHIRQVs+qawNOJpBn8C0AggzBlWJ7LP8NTK7BM8hILzz7ulCMoi7ImoSQpqGq/nHg3CUaI/ajx2EnFpa
+qV6FyQjIbGahxsfH5MehPnqF0B9Xv0D4YMoIwxVKa0TXo2heCvAgYIjaLjAexzOkSDcQUlu+YNEtps6ZysQcRp6nBu7l9FyRh7gpEYW/jGt7S+CcdN5JxrVinGK+bwYd7kW5+mr5ghWvnRqNMl3gxYNYB9JQRrg93vmSw4ncM944x7unjHguVvrxo9xgsX44Ju2YbB4S0o8YOqFu2lpOq3IWVOsDJeXMM7BCgHCd37XI8VDsC4ANyPcB8KG8Q25b
 
-hrMF26dwfwD8Bc2vIPhJGinPt6oPundE+7Wxmys4GS2M9hVpCRj0TnIGOYkVP4SR69kMHRhIbJY5/Kf4Uv4KR7qCQJpqqyi46k2X8OJgOKL3rm4FhPzADFGyW/uh6u65kW/bVhETkUEIwWFMEQUwiuOuHEgdsGKy4USCpvwfAcpM4Rt6xCEhw6wyxPbb3WuwIIkN4q6BcLXaNLnCK9h2Tt5FLmvkakppRo4SSLB+ofuH6R+zgNH6x+8fon7J+BMf
+xEfoXITUe8XR64+FDKbEVGi0fQGMBrQMwGsB7AZwHcBvAfwGURQVs+qawNOJpBn8C0AggbBlWJ7LP8NTK7BM8hILzwLulCMoi7I9oSQpqG5/nHg3CUaLfZ/OcvNzpxaDoazAluncH8A/A3NryD4SRovu7eq+rlHHxhcvomF0SsvmLaxBlWvEHgxLyho46RdCXpE6OcwQWEhshjn8pIRJ/mZHuoJAmmqrKNjmTZfw4mA4oveYbq2ELa1QQQm6QnkT
 
-OERRLrPMHNwvKHsx601sJELRRmFL6g9cAWl9j4wyUX9Yp6FSYeFVJWUbUm5RjSQVFFRrSeFGRRc4bKoxRnshwgNovCE7Lwg9UbyoSu+To1GkorUe8ztRUNp1FdBYphAA8AjzEHgqaBoGHIauYdF14Z+dpn7xJAlNikLxiokBegdck2qzrdi3ELLyzGm4PahBohsoGgSQtqgcDzB6eLBY1MIfPtGxmbPiokFaSiacameqiXsGBqL7thYaJ77jdGOB
+IG2+NCb5Ftm3qK/bUCYAFhTBEFMIrg3hxIHbBisuFEgqb8HwHKTOEbesQhIcOsMsQO2D1rsDuJDeKugXC12iS7dxn1ofKUuIUinopRW4SSKp+6fpn7Z+zgLn75+hfsX6l+XMSeG5RLrNsHNwvKHsx601sJEKQRmFL6g9cAWl9j4wFUf9YHJ1Ua+HHJDUWcnNRVyW1EdRdyTlF5Rd3AVEIcHCA2i8ITsvCBjRvKky6TReThhF6JzoOy7zR+eubH6h
 
-LnmcFi+FwYd7pBgHp5oXAaaqhKOJ9ePpBFYD8WqhSWani/Fm2fwUh6iRYMah6feqcUFT+JhiYEFUxFQAOBTqH5A8ANu6VA44O+ajCEC60YINOQcw2oLW5QgoPvjD8x6CQZZwiLtFZbK2JjmwBMBVyef7oAKYMwBsM6oMWBEh8/pq5SxJNlmTAkgKdujAu/AmtTcAw4NLAdyz2IrCfJ1Npp4BYNEfwnMRi8XrEeqBsUZ4uuxsdim8++wXilWeE9pb
++EY8xB4KmgaBhydsWO4OxpNhvzPAfvEkBU2KQvGKiQF6B1yTarOt2LcQsvLMabg9qEGiGygaBJC2qBwNsHp4sFjUwh8b0dPYfRS3jEmRJpxnKkFaEvnaR3Bcjg8FL+5nmv4SUpQKo41aiCZ8EGUEQn4ZB8qEpUn14+kEVj4JaqFJYKexCebYwhwHtpH4xYHp94CxQVELGZJO/vQl1RqHuJZZaQDHsrrgzMF75qMIQLrRgg05BzDag6blCBg++MCH
 
-FEpXofvG8cpQLo41aFKdcFYggSu9HpksQS3JDGAPHTrMpv4IYLm6B/hyk6+wcTynrWcXg7Z+J6cavaZxADO5ZchwaCvIg+/IG2kIM8DHjCQMPbm46IMUOFrQG0LHlgxapgsWj4RhNYDO6ZI5EJgDnm1EPcCFS8QGwA9A+AOsBfygwaqa/kzyS1EUJYziOD2qBgbjpUE2ZKbLq0kaNxDroVMAXQ96Air6idcUln0IrKF3iYGj6eCpkR2hQBLyJZ0u
+76WVVBTI6h2jrmFsArbkbHkMeESmDMAbDOqDFgDIe3H2x60dRExgyjLfBFCDqkqyp4w4NLAdyz2IrCMpNNsp4BYQka4mSR/8dJGAJRpMAl5aoCSLYyOECfElhqKcoo7apvHLqmaR+jpkExs6cB+i72rcgUEtyQxgDx061qb+CGC5uk/4Op5vpXEup61uF6O2kHjQn9xosQAzuWEocGgryoPvyBXpCDPAx4wkDGW52OiDFDha0BtFrH1uZwrrGycu
 
-sTN7UcnkMx4YpQ9linop3EeolOBPoccF7xpwdo6sSeifLYGJDauJFBB69urJmJ7WgnFlMVifJG7Qlgs1j3xB9tGTuxDFpMihCwCIrAVpKQe7oeJiLkWGlpAkBBKcBP8YKlhOSRoUGf21AvPKPpNsHNAvpLMI4SfpRcN+l0JvEJ5F0uZRgSIiueThyYFOKegDaNRRyc1EnJB6TK7nJ8rruoXsjVI0C1AFJD0A2gU7sMGvJYzjxDPAY8DrAjIF2Ndh
+YTWAyJsfgfHahR8WbEKBxKZkjkQmAOebUQ9wIVLxAbAD0D4A6wF/KzBqplH58eHcXVLk2XaPvQ/CLUqbLq0kaO/HRoVMAXQ96Air6idcUln0IrKF3u4Gj698UXAhhQBLyJZ0wcdN7UcnkCR4Kp/dkqnBmYCeOnxJ4QTAm2ebVqxJpJOchkkNqWSXrG5h6snkntamGWUxFJpkbtCWCzWHgmLpkkuamhCfnoXDlx7ug0mQudZvmT8IRdOiYAG7SUB6
 
-7uMsWp6GMOeNJC/SdsuNGl0qxvxDOh8+kdErxIGSZ5uu0aRBmxp63hbEHxM3rdGtW90XbEZpDsZSm5m8xq7FgmxgWCoty0OE1KtwJaZ9D8Ic0N8G5hF9pynvxx/gi5fx/KfzS/xv3qhkipdIbCCwg74LAn5UWVI26aALjElRaw2tBD7EA2oG2rBy1bhlTu8Y6aO5nCGCbJwRh3IDO6Z2LuI0CSAbDOsD4A+GCmCEAQeAgbE8fwDhDag6unumqZoE
+dJL9kE6dmQSlRk2wc0LRkswjhExn22Srt/AzgsUTsksmq4fsm/WNLtS57JE0TS5TR1oXilzRnLuBmnxjVI0C1AFJD0A2gLbvME0pG0bHT0pp8NggXY12PO5OxCnoYw540kL9J2ye0aXSrG/EJGHz6gvmHHC+EcSAnypv0THHGe6qTqmJxSkVPZgxx+jOlQxLocSY5xYJm4FgqLctDhNSrcBumfQ/CBLFZ0dSY6lkJr/hC6UJ7qfzS9h0irpFchCS
 
-WM7M6ZOlohpODKkTrupX5gIjmUSiN5CCo/qdNCtsHQrBbpor6LaqwKI3FCBfByCLG7mBnNvp68gVyFNzWp+bIt5Rp4GedHJpIWXRK+hqjjbHeBaaS84iRyGWW5GJaGSY65AT0b8o4Zi/nhkNMshj0mkZ9TLQqXeZGXyg6ci/D8F5ZekbykGRwXvWYqIe9GWElZiPGxmTygSXibBJg5tdn4Ut2SMYeZFcI9kzgz2WgrvcXkjdq0ujQdObSZPkSFIK
+FSry04oKmLoMI6pm4uMSVFrDa0kPsQDagbasHKpuGVO7xfpxXhImqhhctyCAZ9Hnj6HxBPmBknxwOmnYu4jQJIBsM6wPgD4YKYIQBB4CBsTx/AOENqDq6VKdNG4pGWczpk6WiHE4MqROtwByMyhpHDrMy6IKitp00K2wdCsFumivotqltEzgUIBCHIIbrhSBdpIcRNxXIU3EWn5sIvpHHKpzWcDHnuNxpqlPB17lc5TpG/lpHSZv3t6nZJuYbkAz
 
-ZcmbJli5SmXJnHJqoc6CyuFyfnrGpOAQwByQFAI0D4AygBgj0AbDDABDqFAD7RwAjQBQDfOHXvLmDReEfjDhC0kOBIAQqeAbIqMB0J8DNiGVqUB2yX5sMp8YMnrjj+xo0u5mwK0FD+jMwoQkcyeZ2hqVbsRvmbYFd+aibBlvufEUmkCRcGU8aBhx+i8qw5f8SRrr2QtpmkWOSMajnxh1ieNJG2ZaA4rTWNKemGVYRtnXFwqxOZF4hxG1iWKsBpIG
+pvyipnH+amQ0yyGryXnGf4iZArkAu00HxBDEjYYF40JxmTbamZNqRQ50WXkdQk2ZrZnZmDhwTmAB/Y4rPhRE5IxlVkVwZObBI9+pOIgi+ZZLmUYrhzVGuGZOYLJVEXyWTkDYrmjLoHk4pRDoU7FOC0USmnxmgTwAUAjQPgDKAGCPQBsMMAEOoUAPtHACNAFAM87tekWRlksR+MOELSQ4EgBC1p4FEzasszYhlalAdsl+bDKfGGJ644x9gxmVZsCt
 
-RyKU38ZSG5u+QW2beoXGYCSe5e0N7ncQqqJs6yIgeWZACiHcKfDpwEmcLkwOX1mUkCuOKilEDhxThzLKZErptnSubUeBHK5WmZKpwAWwGwzUQ+gNEwE+MkZ14DRKwKCDmmfLITDDgsEnvAO5nEJYRZE5FBQjOZAihCCXYdCH+AHQWiMz6+wSxrhT780iTPofZmwXN7hpC3pGmnRAWUDlrer7gSkbcWicdI6JoWemnHxVwVL6FY2RNG5gme0Y8Fps
+BQ/ozMKEJHM1WdoalWskbxmLe+nk1mKRQmW1kJJQMXEkgxTxqkk9ZUmXCEyZIuXJlXcwtgakGO1MVLklhxSeNLG2ZaA4rTWFwOalgkBCDAyGZNuq6luRURu8RkcilFQkepHSSbmBOZuQ5l6EteXtD153EKqhlx9uXnTt5HcKfDpwruUuEQO31l7l0uwWYuae5AeahFYpTLnDmh5UWeHmEpsWcDpwAWwGwzUQ+gNExU+RkR16lpkdKCDmmfLITDDg
 
-ewjQRi4GWajSaq7CfXmVhBWT45FZ/+rWppxFMU2m68EtATBTq05KpaSWwKQgzYAmXtiCKWeAA74EICACXH8hMtElShREKGglju2qX76FylPDO6SA+PqyA3gFJC7gsi7QPoBsAmAGwA3gQePcCYAkplJHm5pyeIyggZmZ8GeQ7MCOCJ4qeKfCQg9CU3DjqrmWMg50sKRZDQqn0J2IrBdftODAkQxE/Hv5KHOHmzeFyGc6rxCjvAWmxwOQnnhmMGcL
+sEnvC1pnEJYRZE5FBQilZAihCCXYdCH+AHQWiLz6+wSxrhT78QSTPpc2mnj2ksKFwQe79pQ+YJl/RccaEFQJW3CPm851rqnH6p6cUglPuTsKAi0Wr0f8FpsewjQRi4k2ajSaqtiVCGn282funkJ1tv/q1qRuaEZnp3ChLQEwU6tOSqWkltykIM2AIl7YgilngBe+BCAgBTxsoTLRJUWUevFKhofmj7bxK9pTwvZcidV66hSfnV6SAlPqyA3gFJC7
 
-4ppCGenn6JAIShnw5mCRGHb5YbtgVKKFiYXlyR1cqELkR7qOd6gm6kW2C7AzqI7DR8eYakHgx9GYZHl45lJXamRAqZWHd52LrWG4uJsB4WPAXhY8C/AvhT2wBFmbPLDBF3kLPmxK8+bk6LmO7BMnCu0uc1Eb5YrvulbZ6mbvmA6XUegBaKrQMwCMMrIHuZwAHAPgA+0udtqDlSmAHanYZaxdkXmF04LnQPwDwHzicwZxPYUcwuIITB6QwHDfC88Y
+gsi7QPoBsAmAGwA3gQePcCYAkpgZE55M0eIyggPEHKK8R91FLyJ4qeKfCQgpiU3Djq5WWMg50oqRZDQqn0J2IHBA/v1FJCE2pvD0qUqV4Gd2dOdGFT+faRI5CFg6aJlmui/h1mSFycVPn856Yeklz5wuSkGL5fEqy53KGQZLnGRT7lwT2hC0LDGYJ9TMq41h6OZsDk0giCfk2cBMSZlNJ5eOZRl2hubfnG5/Yci4BRZwo0WPAzRY8C/AbRT2zAkQ
 
-rB2wM8TKPlxPUfhdlYxWwEpwRfYf6qEVas1gdHkA5wZjEXJ5cRf35J5kGSSnwZUWTDlpFcOcKnDZV3NliYZmujcWqKcWYbLxo+9rmkNMV8WRl38efk1LspNGTbpk5niQxkmELsQlbxeZMaxkdFWLlZHdFNkXoT/F+zkVjbg52q2Emwn0EdQQlYuPTgmI3tg0HTF/YQvni5ixcvkLFDMiK4y5grtkqARW+eDYaZlyfvnXJEsjhDdOOEIkA9A2oJgC
+xE3AYIPRUyrbJbuSk6A2IWTiq+5iUdk4cy0BcHmwFaxbNEIFgOkokQAWiq0DMAjDKyB7mcABwD4APtFnbag5UpgC3xsObnllpvALnQPwDwHzicwZxBUUcwuIITCwRTsjfC88YrB2wM8TKPlxPU7RdlYxWwEpwRfYf6t3kzeFyHs7DF0SWznD5WqcJmqRFnnzkdWAuQsVEasmX+lXc2WIpma6ymVsW5mh0CNwUURujZH5xPKLrA1M/PBcVVx0bnAS
 
-MMPtIcVGArIB4iPMHAISU3F+pWqH4gldObBYC/PPLD2FJIH1L14HcHtR5wkEgkCHE/hNbmFw8nm5n8JZwJGhwIqOArDwgq1O9k92oaa6FuMkRWimIlG8eFkzemiWDktWGJanlQ5R8Rnk4lWec4YRh1+ESVPS+RbJGAeLqB0KUleOfUxU+RBVCb4yRzEa7UFiHnRm32FOSNgSSHUlN4sZneZymdF/JYzBJJ4ZVBR5+TskRETo8ZWnR+xyZXyxTFOm
+65L+IoVi48YjfmrZnqYi5JG/kT0mAkHJes5FY24OdqThJsJ9BHUgpQ6UDSkSpOaAFCUcAWBZDMmAXe5AWWFk+52SqhEIlENtFkR5SBQkgSyOEM044QiQD0DagmAIww+02JUYCsgHiI8wcAmpTqUplNofiCV05sFgL888sBUUkgfUvXgdwe1HnCQSCQIcT+EBeYXCSezea4lnAkaHAio4CsPCBYxPid4EDFvgb3b95AQTP7RxHOfHFc5UxbKWT5ip
 
-sqWzFS+fMXyZapc1Rr5uSrLkqZFuTvkdRe+TQzXJPBjhA9AhxpUBigLuJkj4AKYEHjtAPAMoBMgmSDeBSFhMZrKBA2AFEA6iGfvsCIcQ6Pzx8sDjv6VPAEwtll7w2wqCp2yWFNgojKRgqryWCawUyzt69fHvSs6mhhaYWQw5snT+E1oZ9nOMcJYbFc+a8dEV5lxKb66olYWcSmz2yRS8ZL2lZeVkZF+JXxJHkyOQ2W/haOdXKTOqxHcFB8m7vSlD
+TPaSZCtkLkgGv2s1rX4WpU9IFJ6+SZHJq2QfhQ72cMUzrLpARvjJHMMrnoVBeVpUel8aPnrcXVoFfA8XOld+c8UtBHpRZIZIPZVBQN+TshxEToI5WnSYxE5XywAFsSkAWpO4BXimApQWaFnYpcJcmXklSJThGIFX2Qkg8GOED0CHGlQGKAu4mSPgApgQeO0A8AygEyCZIN4H4XcxmsoEDYAUQDqJV++wIhxDo/PHywWOLZU8ATCEsXvDbCoKnbJY
 
-ozevDLZulafUUsljRUOXNF91CfBtFpWf4kzubACmDUQrIBSSkAlQN+W1AiQPuAjAkgD7SZI1EPQCSARgJAqmFamdfnqK2wIsQXATdmbAjSokEKxboCyNsKgkpFSRFJykaEMjJ4mkW9iEFsZRBaPAjhQ/nQcDXLpB/pIaQBl92bodmVgZuZZ650V1ngxVbcsRXdGllh8cJEVlRGhVlcVVtJV68VBeY2W5mXwQKAP5n0UNrl5X0fVgzE4Ep9DAxtGQ
+U2CiMpGCqvJYJHBTLO3r18e9KzqaGFphZDDmydP4SBhPBc4wxhkpfxnoWYxUpETFZzuPlJJm5XEFzFO5fPaLF+5SRor2R5BLmnlwfGNHVygzqsQ/BQfFO7mpQ6M3rwyIbrukVBVxTrk3FdpfdQnwP5YjxCxeEWwApg1EKyAUkpAJUAMVtQIkD7gIwJIA+0mSNRD0AkgEYCQKeRfDkUl0/Jng/AtwvXZmwI0qJBCsW6AsjbCoJFpVcRScpGhDIyeP
 
-0WDl6vuyUkgIeipV05vJZZE1hM5XPJfCAVfmhBVmbHdYmw4Vc3pgkMaA7BzQm5X2FSZq+aqWalOpfuWrVpSaK6ARKxXqVnlZyZsUoyM7tUAB4XljeAwACisZlX5kdP2DaYBgSQixg2QVFYH0ISl0RcwwCMC5Z0HufXbckdhNVlaxNrptGdEh2uZSeasVRAVLxUBcdHwlcBYDlIlfPnGlXRAWKgX2etsWSn2xrnrFk2ODWJ5p+GRZm+nJZabHQlHY
+ZFvYKhRVmuJjwFUXEF0HA1y6Q7GbTmcZ3dkMULlrOQJmGV0xWIVrl0CZ1nqRKjtOmz5qpQvnqleTIV6OVa+bqUmO0ZPhLEFCMUNq75iMfVgzE4Ep9CWlB6RfbWljnCFUmEUcCHoRVuKi6WTyEmgOGMw1qF8ItV+aG1WZs91ibDdVzemCQxoDsHNDwVOmpGVIVcZTuyoVMZehWYp4Wdik1l8BbhUolkecDrVAAeF5Y3gMAAoppZuBQUV0o2mM4EkI
 
-ROJTQKVL+B3qtItRSTlBx/gY3l1pjihh6Npf3s2kJIo6nOT8h6cNl4eSn0McBzko6iR6iFHasNyCwwckkCg+PrjIWDZcheKH+i08EanGlJqRACsg6wJYDYA/QP0C7pbpSMF2VvADNDXwBZpVWfwLequBZJAcAoJPwiFV/n+VgiBuD4w/+X0od2ahiTp0JuMJNoT6Kblzrpl8VQvrQFf2bAXUVsNbRUb65sSiWJpjFVlURZDnmWV5VdZTgUqoaQiJ
+sYHUFRWB9CEpdEXMMAjfOWdDXk123JHYSwgidHyX8gG8knhLGr+ZCF9FmrlGG1ZQCWNWNZ0pcIUtZ/0dNWbe65TzkzFhFjIUQxHwar6ioyOIOVWRu0MaVYJJiUdhE4V9vmroIEIb66a5QHgtkuOS2SYWxup6SLGWFADKOpzksoenDJeHkp9DHAc5KOqoenhR2rDcgsMHJJAYPqa5iJP6Q9krFVtNPCZp+8RZYmxifgeLEprIOsCWA2AP0D9AGGcx
 
-Wf404DSUQuu9H0l/At8L9JIu6CFJhphuWQ3mpFxbHRnFZ3JROVYeGcawUAMcThrR7AKqbfCjqxAMQAcwutCXGtAIPu25kchFJJblxJVDlr9Z1XtLWZFDVPxDy1V5YrUUAEMBwCZI2oNUDKAzQAIzHVtQPuBMgxuayDkQpiW6V7V9xdlaSQ4QlURLEIyCbITRpNn3oxVu9g6g4UtpqfUepHOrhREg/1e5mQgRdEbJJC1EXnjIpc9qinuQQGefl6sV
+X8epJRlkzQ18AWYQh48C3qrgKyQHAKCT8GJW0FzVYIgbg+MEwV9KrdmoYk6JibjCTaE+nrU053BQAmzedWczkNZghULWTVIhet6j2GqRLUrlsCZZ6WVM+WPSQxx3oCp0IaaqULHFMYEzaeat8L9LiB6CFJjVhTYfoV7pSQa+VupVmT2FPVtlT8xO+sVMvQa0ewDGmVpvYMQAcwutFPGtAoPoW5kchFJJazxJVDlp3Zyof7WrVgdStL3M2PrIlahk
 
-FVEWB1qVRHUFl0GbvGJFKeU87R1iGWxUFVnFXVQuGXkNJF/OAlTGyzQxLqr5tlbKFoGdlivgzzJ0y/C1XMltaZjVwEbJWrRfADwVyWMF7RXkF8lA1YoSClVVNfW7IFrnfVOwhAo9jmwhILQQA8M0AtXFJLJptVS56petUXyWpcsUnlm+VvWK5mmWPWq5UAEYC1A1EHsDUQLiF0Za1JmahECkazI7Cy0r2Nqqk264EMmyw/XrySXZTOnEA51NhPLj
+AKmnHxURcSkUAEMBwCZI2oNUDKAzQAIzo1tQPuBMgGeayDkQuSdWXYV+NdlaSQ4QlURLEIyCbL7R4fH3oDVW9g6g4UtpoQ11pHOrhREgAcWq6QgRdEbJJCgkXnjSpWhmKVWYNHDxn8FUSfpVSOc/v3XKRktokmyOUhSklD1LxtZXLVyxR/X5sXkIZFvO0udjSzQ2Lgb4HFbKLYGqF13pYJTEFNKvUvlF1W/7XFH5XaUxkbJW0k71f5S9UvFgFXkJ
 
-QGfCRBZcQxCErAzSUbjCVhpUNZRXKJyVehZB1iBfilQZKBUWVS26Bamm5V0DTkUY0x3i9w7o53glkVF/YNgjBoU2qTUdV6CGv6jxbiflnVpH8UCEMFjNcwXM1ldQkh8o6DL4rS8XMAgDXIKcJlqZajdUuT8hXITZg8A2VIca/Z65E3ECxZwkLEBsPEKPXYYkqtUBxg0fmww2gE1JdXXFOtc1yQgxCCmqPUZfLLyiQusM8CJuyYtwTmNwfNpg9loS
+BaycLsheZykk7CECj2ObCEgtBADwzQoNfFHu50JdGV+5iZbS5oV8ZRhXw1MBWg34pMWfhWvIRgLUDUQewNRAuIXRtWULBFJQKRrMjsLLSvY2qmTbrg3ybLB9evJHjlM6cQEvU2E8uNAYuJEFlxDEISsDNLOuopaHH81XDYqmD5HdUa7gJaqZzni1s1VNViZcCdPniN9rnLWzpKqLGiq1hxYNm2RpZtgjBoU2lrVRG6CBf7eJc2evWZhoXkFUm1J6
 
-qV5zxbXO0RnAqnrpgxk6wXFVf1kNT5keNmKf5mANPfkFlIF/jddHh1yJdlWo1aeaxXhNAHrmYjgNkLRbGqODYYpUEowuv6kNTReTWeEo2IQ1ReWTYVmfxuTQ2n5NhVYU2ipjbnsr8Q0DK0Dw+hwCqliAKQprTJUCBtQq9QfCE1nKumqbIWTprcSrb4gvTQeKK18QKkhwAqSATyZI9JGM2PmCyEs3URUONM29c2gbpBel6tCHkPAIVW4U8c/ulX4e
+RyHm1zagAx8o6DL4rS8XMNbH9SA4JJbYAxAOdmbA1sfFSNw2VIcZM565AEVJpZwpR4uGPEMHW/1wGf/WgZiiajUEVcYLn5sMNoNImw5KTXgXjSuTVRRvmj1GXyy8okLrDPAXrsmLcERTcHzaYj5aEq5eP8W1ztEZwPJ66YMZMcFDVsqc3VNN4cZcGC1E1e023Bscd3WnO7WT00blIjb3Xblw9esXDNfWdOC+KJqYrlPmlSUcAdIysGjG2lJhJ4Sj
 
-wf2O9UM8nJe+nuZNDjznDKjWOKKuNPte40RpRsTDUpVNzbinBZodaFmZVTzZHUvNUDSkVj0J8ZE1kKaOL4a41tJXkRemykdnVaq+0BC35VFag0Ul11DapVM1CLdwoS0Y6iAlHAuAFrSEITWZJY5xbCFzGDq2CNXE2yKVCSCktUteS3yFlLdVJIQ4AE9CkocAHABGgziPWW/OqIJkAVARAEqTLADAIQAIAFAI8z/ZQciqm1tIoBAARRALIeHHg+gE
+Y51buU2VRtRQmbNTZrvXrZapeekki2bnsr8Q0DK0AIehwDGliAKQprTJUCBtQq9QfCJoCVECdQIC+1BBsmno+AbPiCfNQGaHXvZCiZhiol8QKkhwAqSATyZI9JLjXJ1RVbKIjElaWgrq1Zie9K6Q9ZerQd5DwB1X1FPHP7o9+HsH9jU1DPAladVEFiQ7k5wyo1jiiDTR6ot1erAIUjFbTXw2BqdLZAkbc8pROndZgze8EY0Y9WQpo4vhry0q5MYH
 
-aAuhiFjRzAZpQI22fIKYC21Vt/tQA3BmDbSIC9tLbeRDatfoYUAjtTbdkB9tdlulV3O3baO3NtC7SnJZVM7WO0ZAlQME07gm7au34O0OaW09tB7eRCcAUAORCtQeoKJAl0+7XO3jt57QaCEARgCop7tJ7fe0ZAEXFgBsyxbWyiTMFTX6p3tUAPO2ttByasWY0QHSB03gupRzLul07e+3AdLbUuIRcupk8j1tCHSB12aItDu1egEHeuSMg+oFO5M6
+kRemlkYvVaq+0JK0SNFahs0PV0Xvb47NIthLRjqzCUcC4AWtIQimtklsPFsI45LgCDq2CIvE2yKVCSCJpm8da3BF7zUxXIRP9Q60MeTreHVIBp8YwyoBLiCMDMAMAJgAwA9AKSzkA7QPhgcA1QBQALQaXAsCZcVfvNRJoxBamhnwHsbBSjlX/Goy0IqbbG0TIezNBJl4DKnRntpmmNbADRB/KzqmJ85CpUN41NUrSkOfEKOk1ZPNrpUC17ddS0lt
 
-/unrS21XwNbAdlAgC7T6gqXDqov5o2Fdgdwx7n0QQARgGwAGAebT/gEAPiDSDmZMxKGge0kHS207tGNRUBodpbVKAkAT7S+2rQEnaQBSdx4FZa3tkneH5sAvUNB31uwQJ/q1aJAMPhxIjzByAJIpAMoBigAABQZ11ALwAMEVncyi14xwAACUFoJUAIAygE4iWYxnWZ0RalnV50LKtIHZ2OdxJEB1ttboPS1Q6nACQ3YemQM50Vg8nXuEyuHAJp2i
+ZlV02TFTLZLUD1W5XqmC50rbQkrVdVO81kaG1TqWqKuZl+XAmSnjeUvqgkJUl+ew5rpA9tMrVWoTMttpwQCgDRCNJOlkVZE1ANp8SmAyq2AJoAUA2oNSKSAtQEYDEAHHggDtAjIC1q6JcBRtEGykaCMrSsHSIlospikpIyjCd/EJD8o3Phtx7wwJM2i8ISyicDzK3kLArs45OeJ7DIsvBxmkt4pX3nNNfGa01EdotsI2rl4ZqZURdlHRZVKl8xUt
 
-oYdgmDiyv7MUYAgCXYW0QOebMIA9BH4tl0Ag01KQAsgpAD0Ai06Xc6BFdJXRp2aAWncUaBddgCMCg+OQAaAJdcAJkhqdCADV11d5tqSiAVhAIwARc7HUIz55f5TCjpA/XStDO0Z5FAAGAKHQ9zfezBQYAGgE3WF1CmJRvSCMM/XYN3DdbtB2DgAT5MLaIiwAPt0dgQAA
+WOGSrTkzvNXThy2FhLHS5WP4igsHDrBtFjmjmpYEmdSM4gnWEaHp8hfM35iYnXsyodZjb3GOptmQ/lvVu2o533wHZWBK3wdRSTAedN1CNzvx9djCJdBEdghXg14JchVsu0Nf43BNcNQE0RZ+RRE3plUTRICJANoI0ACM+gHFw3xj5rsJVFBwBTCeEB0Df74N7KGYwNhRjP+CFEFGTxxEgUwgIgLQ8op1yVNbXMkARwllGuBk4tCOp6N13aWS29pB
+
+HUW1hdQ6Z02RdAWJW3JJrLdR29Z9bTtUewaaoVzmpJNcYlZ0ondPCTw6HqV2G1ZXZdVvlUnY9Vm1G2QPHe0BwClSBod8FPFiyBsnsrZUQDBdmlohAZlSswYPutUzqzzZu2vNNrQ1TxANLHhGTBrQBQCVALiF+RJZbDJA02gAvWwwUA+VLbGoN+RY0jPYTnSQg0IvDgB1fmvOIsJsOduY1Ux4HXOOqCRg8G2w4tc1FpCiiOwQ3jkC2ZCw2hJ3eAzl
+
+9430dcEylFHQI0zVEhcy1S1cXWy01tmPRYVoQ/ovEB+WI9cM2bFrHdtWo9sOBQpG6rsJUkXoEfCvX61oRsZkiduudV1d8VecenytFja7ZWN9mai71wGeOIjWwevdGg9EuLsb2ZsOFCdGJaYZaS4RlPjVGUQlUNYE0w103cHmYVHMojVYRyJSjJ4RFzRQCPMrIM7jZ5YLelkUlVMPSky8GZLygAIUVpIEDRqqNsJHMLwJBJmq/7rxjrO4JMs6j6Ow
+
+E53Ema4LQ5T93Ne9ET+n0X93BdA+WL6jFNLV3Xlt3TS72O9XWTLVQ9mcf1lMor7md7T1kyCw5IcpDZV3vQYnfhQAaGPYYWLZsrQO2NB8+VI3KtFQI/DaQAfkOgn1c0EIm9ginW0hQ++0MHAFU3wBdk+1rPeIlbtkiarbxAPQCIGolUAEHhx5ufsAhCAmSGwy1ABoI4iMAQFCmBUxxaSHmIl6DS0gJAsbI5Lcpewh7GaqYmOTTZE3ztSrV5OdNCB9
+
+S1XNYnQgFAvMpcVGqOpC84HwPXa5tOhtxlYFBbdw2hdBlZf2O9xlUmFCNLVn02zF8XVZWwhkjQeW+90vel35Jm1cH0fO4fM3hX8MbcrUNYkfe/3yEsdOzAcWAVUZlXFifTcXVdZDm/0Qe6fU8WWNAFdn1v2vhOINw4ZwFIPCVughsAZ48g+s4SG9dl43JOuyQFn19KFY31TdEBQmWQlSZW33hNaZXhWydwOiC17AOEKkhMgjDHo5D9eNXL0sRFOF
+
+YwGYexVzVSerbSslDEA2oNwgS38c+ZvYD8NdYEyFdXKx59XndIx9CRgn50ktR/bwWUpp/YuVxhKqaW2tZpHay239/Dff3wJacXZ4Vd21VvBT1XHUggH5pwGmgyE1qX/1uNcKs+U0JmPdrlytvjts0E9kAxIA/gc5NqB9Cqbul6yhM0KOSjqHkPLQ314ljwCyWhHlOoyhU8Ru24D7Pdu22tGOnhHsA7QIQARcN4I0AwA6VNRDNAzgNUCVAtWHA4cA
+
+TOT0aci+iXaqN8mbBmSM4Fvcd0Qh0sMLDuo73d840FPHFhTKCZaGsmrp43qPpawWFK/i8Y4Fd2gqDc5aI6UthHdoPEdMXU71Rd3ORUBRBq/uD0aRypYl3vGyXT70EDqWceWr5mXapnVy6wdPBZEVYU43uDYYXlTzQpXQn0liKPVmTOwSxqANrZHuuEPulkQ70nsjL+Ang5qQWukJ8jYmFMn4yhcD8AZDowR7m20IBUE0N9OQ/cwwluSqE0t9JYoK
+
+blDEdafG6O6YNUB7A1FWFwuIbAfkgUpmALUBbAoRbDkmBbA5xgIdFwiNygkB9Nk3DomMB8Vbgn8HtAehtpg9GsCJNfKICoXnmm3ISTLIMgWQ2sDCrEt33bOV4do1csPjVko+F2GDeg7Xjxi2wxIAKjMQeZWiNJg+y1mDSXfR0pdtrWvHWDGccgmP47qIXBKDvhpM0mllWCw4aKAHiQmn55Xc7w2jZjhcSgquPYO0tm/5S6OP5Ofd0kRo+sGQ611Q
+
+BGCGbJvSZdZH2/nkMr3UwaWvL2omsLfBRoB9GQLOEree/G/ELmSTgxG2cJ7KLCZsEMr9IxLkBOey9QrhS8YXREASyIZMCaZTZz1rYSRKQE7GCZ4VXI1h06g3A0LPm1JudrUIJNdROAkFdJcRdooEjsH8VX+ccxKuVqp8C46uE1xNxAk2t8WVprMDG1SwyQDbLDKJAvTw++YRA7KbgirCMa32NsrIj8jZHBmSNEho2ERmq1quNjGJfzlLCQcUOPrI
+
+BjlCMZO6MsCIIRU1hlCUDgUf6jrATlxiIWhhECk9zhNE24OPCfCTMC/jvdfnhPAjIPk38VdsffnwgqNUwCTqyGVhFzBxDQrGEQYTwpBoqtocEmCJPAr+FJZSQQvP8lDhfeq+htscnhoQLJOU0yUKCAyT4LiTQFc7CQgf2F8CnASCh6HbM88g7JiCCEZyTUIiEebniQWFGQJNSfwJWnUEkQvPKedgkFZA/CyMWsTFTOXK0i8R1GnuhLJk0+KyzOZd
+
+jMi7wYRFhThWFxLJC3CK8ekKyQycH542wssC+YfAu087HETfqNLxxDYIskAX+R2N1MvmHAjRP8jpAgDxfF80BNOnTL0wpXNYI4B9NcTJdg2O6YrsGThQzFJgkDXEMyFTVSDoMw1P0+aChNobU0Vn8EIwvUnsyKVHSJcS7AaUzxFkm0yKqhlmsM0wj7M5/udQNckU8Ny3CnXe0hxTrkxngLJNhHjDTwuXPZPP8PXvi0/wl/tjMl2z+MYoAaU2fZMz
+
+oqNIYyXEQxGCJCz7MMOCizssPZMgmVpoQjQzYFtnBIg0EvLMUwO/WpMWmvgv4RWmnHYLPazhRLrNizxU3rKtwT3iw4OwnwhnhSsDfmdR706kPrObg/o+f4EgPhkEp59y9Ggiy0SmB3BhEcQLv2VcHaI2Ptwss6KLKSigjBNxgwc8VMMjSeOPBQ4TUng3Yz5Ni6hLK42t/CcTQFZBxfFEcFIQjIHfonC7MDta3DPJ58P1NP5vMI7MUccbM/jCw3bH
+
+7q+w8uIoIuwzGvnN5CGwLiAdSyku0yo0RxdnAyGlwtvBnU+MmilDhzSMBKddBCBFacRbc87FBw/PBf401CEwULIK46gnOv5ugpMqq8rqNuh6QAApvPx4dxB2M6IzkiU1GynJEbIdIyM73Oedf4GzCMol2GhN+6cQLAjlhlaHhyATgJLApuwD1AXlNYd6NfOiicE4PrvcA4JvNALMAjhQCYnxDszQRBcBTh+yuaF5KfjvMBCDNEjaV8DfFz1s5IoL
+
+WMDhQM+vwM4QQg0hJYJTuv+eZBELYmLv0zQhsntQZoA0+grN4B2DLzqMJhPQtHAD6HnCxg0FLXNYLguLlPYKVfIgjXRWMcgvOxSQrQjDgg41jL9z/qJbBDo4/PvO9jci+rQ++CIEosuogpUIKlzsPeXOaL+sgOMv8Si9PzDI0KlYwaMGi7ItmLCixYtDhJTRnQbw6HgoPqNfuqYv9jTi7otDdORj0F5GfQYUb+2xRsMEjdtfaH6XWVi+4uai6zl4
+
+syL8Eo4s6LPfFskZlFQJgA3gqbvQCyql2EYCVAUdTaCMMNoEYBbABoDDnVlJY7Xp16xVB3oeh/5tP3iDxdOJiLzlCK4E0NbdsobDZ/nQsM6VY4xS2FtUpYD3jFG3vJjWseFouMPGy42mGmDTqXuWKtm4xqPvN5rbW2PuuZgoK2pzNVx13lUJsPwzQCIPGIrNgVWfk/M94y0nYCDowq1OjmfREMfjUQ54Gf2nQd/YIkv9hri4mSMLWJwigDv0FhLY
+
+bnFGZD8SpLCPL79s8s3aqJQnaED4XKwz5l6wBFysBpftSSY24ubDkV+n7bSl8pZ3dZCJtIsGjkxg2IEBId691OWgxokEsoyWCJ8E2MUIhve9IUECeNG2P6Hep2nDjw1YMV+B/3cMuTjMjtONjLWw+GqRB0QdMsstyowl1St5g3ZXvNmsdqNKKTlXYOlhkyCUIgm2MLRYazqjaNnfwZMybPYxPgzePY9zQaSEVAIwJwHa0rQORAw6FJDaAjA6SJID
+
+rAbAI8zxApAKC0EhPMUSHUBYgUn2o9PCOTRXLMncmPA6Rq5oAmrZq3AAWrVq84A2rdqw6tOridVhnkjsCgSAczvxH9izOAHSsnZZJgjxO01AirRM10RCLDh70T3ejndV9KEwtuwm/JzYzlrK73lq8X9YMuaD5/cW1Tj9VjOMiZdxoKsKl7vZD2qjyZsO1Lq85QH0ZdMa2eXbFFwm2yOStFuzDmpKtPwgPUlo/20/9S2goKckl2NfkrZ0nWEO3L74
+
+810DTMDIhzk4+a/YR2wNJf3MSYexOWvBjy4b41RjWSnkMnlHWjVHZA24f0BQrkgDCtLk8K/cCIrjSpFh/h3UeshNwfWvdRDzIyfCl9RkyOikoRsJXGNYV83WUMo1GSxICk+xAP0A9AmABFwo2RgBFx+4ygEaCwAiQBSQOVZJbL3VQEIJoTJT1kHKSJLijJVhb9KiMzDzCeROMqXKxvYWgRCjcDPC0K3Y7fpyiB9FYwrKrCCKPbKHDeoMs5VLVyuj
+
+LPdfoPRdUyx2srjHvXe5e9va773agcjSNYb5Mua1VAIEsUaWnjWCbyhvxVfN4PlBvg6cuGN0PGJ0XEwqXV1mFYbo12vVihHXPxTLGyUKSisdOXajJGeMnRKrL/M2LEu4ZZEtgl/udevvMk3b42FDDfXN2FVOFQSnwbS3egDKA1QNSIu4zQJID4A1QMRVMgKWR+CjAHAC7gkjupmiuPmdOnDPRiI0cSY1jDtSqTFERCENL112dHG3zUGigQjiILMH
+
+B014CHQdqKTKHTOCuq5CrHD0CTei1jaV4pfh3jjYm7w1NrVxpJtj5cowuPtrE6RJlrj8y7R3e9LvAQNvZu49qVDrW1fYNk2LCFJi8lXHUNsaNJnEWiCYOCvcNAeTw9cOo9gaAWg+r6ZeABPQpKHABwARoM4h3r0wKiCZAFQEQBKkywAwCEACAL32ibMGjGng7KmwDu5RALLVHHg+gEaC81o4+yvahIgJ8gpgcO48yg7APVwoQA0O2jtw75EFKO3K
+
+uO6juw7dlrys6pJOzDuPrcOwjtCKy/oqOFAVO/jsZAlQPNU7gzO2TvoOi1SjvU7UAOjsZA5EJwBQA5EK1B6gokCXSc7NO4LvC7BoIQBGAKihzt47XOxFxYAbMn9tsokzNbF+qUu/zu07GKfGO6ouuwLv6AN4MUM3y7ff/Wk70u/U7ri8KyxXDQIoMbsE7uKGztegmNJaAu0+oC27jSwSuPyHTQiKrTf4nu4yD6gqXOxDTIzsRPzwCGyfhwQARgGw
+
+AGAn20ZQEAPiDSD9zwacSTO7rO3IUVATyE7tSgJAHLsK7q0ADuF7/AceBWWku+XuZIbAL1Bm7mbsECf6tWiQDD4cSI8wcgCSKQDKAYoAAAUo09QCUlzKEPuD71rAACUFoJUAIAygE4iWY3e33sRag+4vsLKtILOMT7We8rvZAdOyyDutUOpwCHDiy1PsVgpAM+EoVje6Kjh28fgsDhLzoBwAi0N+9FhCAUAJyIgOebNNSkALIKQA9A9+6/sAg7+5
+
+/sN7mgE3vFGWe3YAjAYPjkAGgd+3AC179e3ftAHq1qShsVhAIwARcie0Iw6jLA1XLBAyBytDO0Z5FAAGA9u22AvD5hYyDw76QLgdCmJRvSCMMyB6gfoHkDuABPkI7U2AdgIAB2BAAA==
 ```
 %%
